src/main/java/org/epl/parser/EplParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. EplParser.java */
package org.epl.parser;

public class EplParser/*@bgen(jjtree)*/implements EplParserTreeConstants, EplParserConstants {/*@bgen(jjtree)*/
  protected static JJTEplParserState jjtree = new JJTEplParserState();public static boolean debug = Boolean.getBoolean("epl.debug");

    public static void main(String args[]) throws ParseException {
        EplParser parser = new EplParser(System.in);
        /* This is a call to any nonterminal; use the start symbol */
        parser.S();
    }

/* Here are the method definitions */

/* Start symbol */
  static final public void S() throws ParseException {
 /*@bgen(jjtree) S */
  ASTS jjtn000 = new ASTS(JJTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering S() method");
      label_1:
      while (true) {
        Stmt();
        jj_consume_token(28);
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
      }
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving S() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Stmt() throws ParseException {
 /*@bgen(jjtree) Stmt */
  ASTStmt jjtn000 = new ASTStmt(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(2)) {
      if (debug) System.out.println("Entering Stmt() method");
        Print();
      } else if (jj_2_3(2)) {
        Execute();
      } else if (jj_2_4(2)) {
        Foreach();
      } else if (jj_2_5(2)) {
        If();
      } else if (jj_2_6(2)) {
        Listener();
      } else if (jj_2_7(2)) {
        Broker();
      } else if (jj_2_8(2)) {
        Condition();
      } else if (jj_2_9(2)) {
        Action();
      } else if (jj_2_10(2)) {
        Situation();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Stmt() method");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Execute() throws ParseException {
 /*@bgen(jjtree) Execute */
  ASTExecute jjtn000 = new ASTExecute(JJTEXECUTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      if (debug) System.out.println("Entering Execute() method");
      jj_consume_token(EXECUTE);
      t1 = jj_consume_token(ID);
                          jjtn000.returnVar = t1.image;
      jj_consume_token(AS);
      t2 = jj_consume_token(STRING);
                         jjtn000.literalString = t2.image;
      if (jj_2_11(2)) {
        Params();
      } else {
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Execute() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Param() throws ParseException {
 /*@bgen(jjtree) Param */
  ASTParam jjtn000 = new ASTParam(JJTPARAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1;
    try {
      if (jj_2_12(2)) {
      if (debug) System.out.println("Entering Param() method");
        VarExpr();
      } else if (jj_2_13(2)) {
        t1 = jj_consume_token(STRING);
                      jjtn000.literalString = t1.image;
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Param() method");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Params() throws ParseException {
 /*@bgen(jjtree) Params */
  ASTParams jjtn000 = new ASTParams(JJTPARAMS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering Params() method");
      label_2:
      while (true) {
        Param();
        if (jj_2_14(2)) {
          ;
        } else {
          break label_2;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Params() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Listener() throws ParseException {
 /*@bgen(jjtree) Listener */
  ASTListener jjtn000 = new ASTListener(JJTLISTENER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1, t2, t3;
    try {
      if (debug) System.out.println("Entering Listener() method");
      jj_consume_token(LISTENER);
      t1 = jj_consume_token(ID);
                           jjtn000.name = t1.image;
      jj_consume_token(FOR);
      t2 = jj_consume_token(STRING);
                          jjtn000.eventType = t2.image;
      jj_consume_token(IN);
      t3 = jj_consume_token(ID);
                    jjtn000.broker = t3.image;
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Listener() method");
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Broker() throws ParseException {
 /*@bgen(jjtree) Broker */
  ASTBroker jjtn000 = new ASTBroker(JJTBROKER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      if (debug) System.out.println("Entering Broker() method");
      jj_consume_token(BROKER);
      t1 = jj_consume_token(ID);
                         jjtn000.name = t1.image;
      jj_consume_token(IS);
      t2 = jj_consume_token(STRING);
                         jjtn000.connectString = t2.image;
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Broker() method");
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Print() throws ParseException {
 /*@bgen(jjtree) Print */
  ASTPrint jjtn000 = new ASTPrint(JJTPRINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering Print() method");
      jj_consume_token(PRINT);
      label_3:
      while (true) {
        PrintCatenation();
        if (jj_2_15(2)) {
          ;
        } else {
          break label_3;
        }
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Print() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void PrintCatenation() throws ParseException {
 /*@bgen(jjtree) PrintCatenation */
  ASTPrintCatenation jjtn000 = new ASTPrintCatenation(JJTPRINTCATENATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      PrintExpr();
      if (jj_2_17(2)) {
        label_4:
        while (true) {
          jj_consume_token(29);
          PrintExpr();
          if (jj_2_16(2)) {
            ;
          } else {
            break label_4;
          }
        }
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PrintExpr() throws ParseException {
 /*@bgen(jjtree) PrintExpr */
  ASTPrintExpr jjtn000 = new ASTPrintExpr(JJTPRINTEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1;
    try {
      if (jj_2_18(2)) {
        VarExpr();
      } else if (jj_2_19(2)) {
        t1 = jj_consume_token(STRING);
                   jjtree.closeNodeScope(jjtn000, true);
                   jjtc000 = false;
                   jjtn000.literalString = t1.image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  static final public void Expr() throws ParseException {
 /*@bgen(jjtree) Expr */
  ASTExpr jjtn000 = new ASTExpr(JJTEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_21(2)) {
      if (debug) System.out.println("Entering Expr() method");
        VarExpr();
        if (jj_2_20(2)) {
          Conditional();
        } else {
          ;
        }
      } else if (jj_2_22(2)) {
        NotConditional();
      } else if (jj_2_23(2)) {
        jj_consume_token(30);
        Expr();
        jj_consume_token(31);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Expr() method");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarExpr() throws ParseException {
 /*@bgen(jjtree) VarExpr */
  ASTVarExpr jjtn000 = new ASTVarExpr(JJTVAREXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      if (debug) System.out.println("Entering VarExpr() method");
      t1 = jj_consume_token(ID);
              jjtn000.name = t1.image;
      if (jj_2_24(2)) {
        jj_consume_token(32);
        t2 = jj_consume_token(ID);
                    jjtn000.member = t2.image;
      } else {
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving VarExpr() method");
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Condition() throws ParseException {
 /*@bgen(jjtree) Condition */
  ASTCondition jjtn000 = new ASTCondition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1, t2;
    try {
      if (debug) System.out.println("Entering Condition() method");
      jj_consume_token(CONDITION);
      t1 = jj_consume_token(ID);
                            jjtn000.name = t1.image;
      jj_consume_token(IS);
      Expr();
      jj_consume_token(WITHIN);
      t2 = jj_consume_token(DIGITS);
                             jjtn000.timeout = t2.image;
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Condition() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Conditional() throws ParseException {
 /*@bgen(jjtree) Conditional */
  ASTConditional jjtn000 = new ASTConditional(JJTCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_25(2)) {
      if (debug) System.out.println("Entering Conditional() method");
        OrConditional();
      } else if (jj_2_26(2)) {
        AndConditional();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Conditional() method");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void NotConditional() throws ParseException {
 /*@bgen(jjtree) NotConditional */
  ASTNotConditional jjtn000 = new ASTNotConditional(JJTNOTCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering NotConditional() method");
      jj_consume_token(NOT);
      Expr();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving NotConditional() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void OrConditional() throws ParseException {
 /*@bgen(jjtree) OrConditional */
  ASTOrConditional jjtn000 = new ASTOrConditional(JJTORCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering OrConditional() method");
      jj_consume_token(OR);
      Expr();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving OrConditional() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void AndConditional() throws ParseException {
 /*@bgen(jjtree) AndConditional */
  ASTAndConditional jjtn000 = new ASTAndConditional(JJTANDCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering AndConditional() method");
      jj_consume_token(AND);
      Expr();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving AndConditional() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/* Change:  allow empty block; i.e. {} */
  static final public void Block() throws ParseException {
 /*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering Block() method");
      jj_consume_token(33);
      label_5:
      while (true) {
        Stmt();
        jj_consume_token(28);
        if (jj_2_27(2)) {
          ;
        } else {
          break label_5;
        }
      }
      jj_consume_token(34);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Block() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Action() throws ParseException {
 /*@bgen(jjtree) Action */
  ASTAction jjtn000 = new ASTAction(JJTACTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1;
    try {
      if (debug) System.out.println("Entering Action() method");
      jj_consume_token(ACTION);
      t1 = jj_consume_token(ID);
                         jjtn000.name = t1.image;
      jj_consume_token(IS);
      Block();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Action() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void List() throws ParseException {
 /*@bgen(jjtree) List */
  ASTList jjtn000 = new ASTList(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (debug) System.out.println("Entering List() method");
      VarExpr();
      if (jj_2_29(2)) {
        label_6:
        while (true) {
          jj_consume_token(35);
          VarExpr();
          if (jj_2_28(2)) {
            ;
          } else {
            break label_6;
          }
        }
      } else {
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving List() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Situation() throws ParseException {
 /*@bgen(jjtree) Situation */
  ASTSituation jjtn000 = new ASTSituation(JJTSITUATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1;
    try {
      if (debug) System.out.println("Entering Situation() method");
      jj_consume_token(WHEN);
      t1 = jj_consume_token(ID);
                       jjtn000.condition = t1.image;
      jj_consume_token(DO);
      List();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Situation() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Foreach() throws ParseException {
 /*@bgen(jjtree) Foreach */
  ASTForeach jjtn000 = new ASTForeach(JJTFOREACH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t1;
    try {
      if (debug) System.out.println("Entering Foreach() method");
      jj_consume_token(FOREACH);
      t1 = jj_consume_token(ID);
                          jjtn000.forEachContainedThing = t1.image;
      jj_consume_token(IN);
      VarExpr();
      Block();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      if (debug) System.out.println("Leaving Foreach() method");
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }
